# Sovkom_torch

./: .gitignore  README.md  bin_trans_repo.py  docker-compose.yaml  promtail-config.yml  test_workflow.py
API/: Dockerfile  go.sum  req.http
API/AI/: func.go
API/docs/: docs.go  swagger.json  swagger.yaml
API/handlers/: handler.go
API/pkg/postgreSQL/: connect.go  models.go
backend_ai/: features.py  main.py  oсr_utils.py  pyproject.toml
backend_ai/app/: Dockerfile  features.py  main.py  oсr_utils.py  requirements.txt
backend_ai/app/features/: bin_trans_repo.py  brands.csv  feature_store.yaml  features.parquet  features.py
backend_ai/app/features/transactions/: brands.py  example_repo.py  feature_store.yaml  features.parquet
backend_ai/app/features/transactions/data/: online_store.db  registry.db
backend_ai/app/models/: multivae.onnx  multivae.pt  multivae.py  register.py
backend_ai/models/: multivae.py
backend_ai/monitor/: app.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: Router.tsx  index.tsx
frontend/src copy/: Router.tsx  index.tsx  style.css
frontend/src copy/components/: Header.styled.ts
frontend/src copy/components/Analitycs/: Analityc.tsx
frontend/src copy/components/Auth/: AuthPage.tsx  styles.styled.ts
frontend/src copy/components/ScanCheck/: ScanParseForm.tsx
frontend/src copy/components/Start/: Start.styled.ts
frontend/src copy/lists/: apies.ts  routes.ts
frontend/src copy/stores/: Data.store.ts  Main.store.ts
frontend/src/components/: Header.tsx
frontend/src/components/Analitycs/: Analityc.styled.ts  (+1 more)
frontend/src/lists/: apies.ts  routes.ts
frontend/src/stores/: Main.store.ts
frontend/src/utils/: other.ts
graphana/: datasources.yaml
graphana/API/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
graphana/API/AI/: func.go
graphana/API/docs/: swagger.json
graphana/API/handlers/: handler.go
graphana/API/middleware/: middleware.go
(+11 files in other folders)
